[tool.poetry]
name = "python-eda"
version = "0.1.0"
description = "Create a CLI wrapper for sweetviz Python exploratory data analysis (EDA) tool."
authors = ["thuwarakeshm <thuwarakeshm@stax.com>"]
readme = "README.md"

[tool.poetry.scripts]
pyeda = "python_eda.main:app"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
typer = {extras = ["all"], version = "^0.4.0"}
sweetviz = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
